; ModuleID = '/home/carl/AnghaBench/libui/unix/extr_table.c_textColumnEdited.c'
source_filename = "/home/carl/AnghaBench/libui/unix/extr_table.c_textColumnEdited.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.textColumnParams = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32*, i64)* @textColumnEdited to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @textColumnEdited(i32* %0, i32* %1, i32* %2, i64 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.textColumnParams*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store i64 %3, i64* %8, align 8
  %12 = load i64, i64* %8, align 8
  %13 = inttoptr i64 %12 to %struct.textColumnParams*
  store %struct.textColumnParams* %13, %struct.textColumnParams** %9, align 8
  %14 = load i32*, i32** %7, align 8
  %15 = call i32* @uiNewTableValueString(i32* %14)
  store i32* %15, i32** %10, align 8
  %16 = load %struct.textColumnParams*, %struct.textColumnParams** %9, align 8
  %17 = getelementptr inbounds %struct.textColumnParams, %struct.textColumnParams* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.textColumnParams*, %struct.textColumnParams** %9, align 8
  %20 = getelementptr inbounds %struct.textColumnParams, %struct.textColumnParams* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = load i32*, i32** %6, align 8
  %23 = load i32*, i32** %10, align 8
  %24 = call i32 @onEdited(i32 %18, i32 %21, i32* %22, i32* %23, i32* %11)
  %25 = load i32*, i32** %10, align 8
  %26 = call i32 @uiFreeTableValue(i32* %25)
  %27 = load i32*, i32** %5, align 8
  %28 = call i32 @GTK_CELL_RENDERER(i32* %27)
  %29 = load %struct.textColumnParams*, %struct.textColumnParams** %9, align 8
  %30 = getelementptr inbounds %struct.textColumnParams, %struct.textColumnParams* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = call i32 @GTK_TREE_MODEL(i32 %31)
  %33 = load i64, i64* %8, align 8
  %34 = call i32 @textColumnDataFunc(i32* null, i32 %28, i32 %32, i32* %11, i64 %33)
  ret void
}

declare dso_local i32* @uiNewTableValueString(i32*) #1

declare dso_local i32 @onEdited(i32, i32, i32*, i32*, i32*) #1

declare dso_local i32 @uiFreeTableValue(i32*) #1

declare dso_local i32 @textColumnDataFunc(i32*, i32, i32, i32*, i64) #1

declare dso_local i32 @GTK_CELL_RENDERER(i32*) #1

declare dso_local i32 @GTK_TREE_MODEL(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
